--- a/css/styles.css
+++ b/css/styles.css
@@ -127,7 +127,7 @@ h6 {
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-
+  margin-bottom: 48px;
   max-width: 496px;
 }
 .hero-button {
