--- a/css/styles.css
+++ b/css/styles.css
@@ -24,20 +24,22 @@ h6 {
 .link {
   text-decoration: none;
 }
+.container {
+  width: 100%;
+  max-width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
+
+  margin-left: auto;
+  margin-right: auto;
+}
 
 /* -----header----------- */
 
 .header {
   border-bottom: 1px solid #e7e9fc;
 }
-.container {
-  width: 100%;
-  max-width: 1158px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
-}
+
 .header-container {
   display: flex;
   align-items: center;
@@ -157,13 +159,22 @@ h6 {
 .descrip {
   background-color: #ffffff;
 }
-
+.descrip-list-item {
+  width: calc((100%-72) / 4);
+}
+.descrip-list {
+  display: flex;
+  align-items: center;
+  padding-top: 120px;
+  gap: 24px;
+}
 .descrip-list-title {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--headings-color);
+  margin-bottom: 8px;
 }
 .descrip-list-descrip {
   font-size: 16px;
@@ -175,6 +186,18 @@ h6 {
 .main-activity {
   background-color: #ffffff;
 }
+.activity-contatiner {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.main-activity-list {
+  display: flex;
+  gap: 24px;
+}
+.main-activity-item {
+  width: calc((100%-48) / 3);
+}
+
 .section-title {
   font-size: 36px;
   line-height: 1.11;
@@ -182,14 +205,36 @@ h6 {
   text-transform: capitalize;
   color: #2e2f42;
   text-align: center;
+  margin-bottom: 72px;
 }
 /*-----team-------*/
 
 .team {
   background-color: #f4f4fd;
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.list {
+  display: flex;
+  gap: 24px;
+}
+.image {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.section-title {
+  margin-bottom: 72px;
 }
 .team-item {
+  width: calc((100%-72) / 4);
   background-color: #ffffff;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
+}
+.card {
+  padding: 32px 16px 32px 16px;
 }
 .team-item-name {
   font-weight: 500;
@@ -197,21 +242,30 @@ h6 {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
+  text-align: center;
 }
 .team-item-position {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  text-align: center;
 }
 /*------footer-------*/
 
 .footer {
   background-color: #2e2f42;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+.footer-logo {
+  margin-bottom: 16px;
 }
 .span-footer {
   color: #f4f4fd;
 }
 .footer-txt {
+  max-width: 264px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -219,6 +273,15 @@ h6 {
 }
 /*------portfolio-------*/
 
+.portfolio-main {
+  padding-top: 168px;
+}
+.filters {
+  display: flex;
+  margin-bottom: 72px;
+  margin-left: auto;
+  margin-right: auto;
+}
 .filters-button {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
@@ -228,11 +291,26 @@ h6 {
   color: #4d5ae5;
   background-color: #f4f4fd;
   cursor: pointer;
+  border: 1px solid #e7e9fc;
+  border-radius: 4px;
+  display: block;
+  padding: 12px 24px 12px 24px;
 }
+
 .filters-button:hover,
 .filters-button:focus {
   color: #ffffff;
   background: #404bbf;
+}
+.product {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 24px;
+}
+.product-item {
 }
 .product-item-name {
   font-weight: 500;
