--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,11 @@ h6 {
   margin-top: 0%;
   margin-bottom: 0%;
 }
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 
 .link {
   text-decoration: none;
@@ -32,6 +37,18 @@ h6 {
 
   margin-left: auto;
   margin-right: auto;
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 /* -----header----------- */
@@ -160,7 +177,7 @@ h6 {
   background-color: #ffffff;
 }
 .descrip-list-item {
-  width: calc((100%-72) / 4);
+  width: calc((100% - 72px) / 4);
 }
 .descrip-list {
   display: flex;
@@ -195,7 +212,7 @@ h6 {
   gap: 24px;
 }
 .main-activity-item {
-  width: calc((100%-48) / 3);
+  width: calc((100% - 48px) / 3);
 }
 
 .section-title {
@@ -214,20 +231,17 @@ h6 {
   padding-top: 120px;
   padding-bottom: 120px;
 }
+
 .list {
   display: flex;
   gap: 24px;
 }
-.image {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
+
 .section-title {
   margin-bottom: 72px;
 }
 .team-item {
-  width: calc((100%-72) / 4);
+  width: calc((100% - 72px) / 4);
   background-color: #ffffff;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -275,9 +289,11 @@ h6 {
 
 .portfolio-main {
   padding-top: 168px;
+  padding-bottom: 120px;
 }
 .filters {
   display: flex;
+  justify-content: center;
   margin-bottom: 72px;
   margin-left: auto;
   margin-right: auto;
@@ -306,11 +322,21 @@ h6 {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  align-items: flex-start;
+  justify-content: center;
   padding: 0px;
   gap: 24px;
 }
+.product-card {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  padding-left: 16px;
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
+}
 .product-item {
+  width: calc((100% - 48px) / 3);
+  background-color: #ffffff;
 }
 .product-item-name {
   font-weight: 500;
@@ -318,6 +344,7 @@ h6 {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 .product-item-type {
   font-size: 16px;
