--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,7 @@ img {
 .header-container {
   display: flex;
   align-items: center;
+  gap: 40px;
 }
 .header-navigation {
   display: flex;
@@ -134,6 +135,7 @@ img {
 }
 .header-address {
   font-style: normal;
+  gap: 40px;
 }
 /*---------hero--------*/
 
