--- a/css/styles.css
+++ b/css/styles.css
@@ -324,6 +324,7 @@ img {
 .filters-button:focus {
   color: #ffffff;
   background: #404bbf;
+  border: 1px solid transparent;
 }
 .product {
   display: flex;
@@ -332,6 +333,7 @@ img {
   justify-content: center;
   padding: 0px;
   gap: 24px;
+  row-gap: 48px;
 }
 .product-card {
   padding-top: 32px;
