--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,9 @@ img {
   padding-bottom: 24px;
   gap: 40px;
 }
-
+.header-menu-item {
+  gap: 40px;
+}
 .header-menu-link {
   font-weight: 500;
   font-size: 16px;
@@ -124,6 +126,10 @@ img {
 .adress {
   display: flex;
   margin-left: auto;
+  gap: 40px;
+}
+
+.header-address-item {
   gap: 40px;
 }
 .header-address-link {
@@ -335,13 +341,12 @@ img {
   gap: 24px;
   row-gap: 48px;
 }
+
 .product-card {
-  padding-top: 32px;
-  padding-bottom: 32px;
-  padding-left: 16px;
   border-bottom: 1px solid #e7e9fc;
   border-left: 1px solid #e7e9fc;
   border-right: 1px solid #e7e9fc;
+  padding: 32px 16px;
 }
 .product-item {
   width: calc((100% - 48px) / 3);
